@@ -7,7 +7,8 @@
 - Fixed ControlWithItems, Choice, ComboBox and ListBox to properly 
   handle pure virtual methods, allowing the controls sample to work again
 - Properly mark more Dialog methods as being virtual (Roy Sutton)
-- Fixed all the Event classes to properly handle pure virtual methods.
+- Fixed all the Event classes to properly handle pure virtual methods
+- Fixed all the GridXxxRenderer classes to handle pure virtual methods
 
 
 
